--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=User-Service
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service
+
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
