--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-spring.kafka.bootstrap-servers = 9092
+spring.kafka.bootstrap-servers = localhost:9092
 spring.kafka.consumer.group-id=order-group
