--- a/Invoice-Service/src/main/resources/application.properties
+++ b/Invoice-Service/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 
 spring.kafka.bootstrap-servers = localhost:9092
 spring.kafka.consumer.group-id=invoice-group
+
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
