--- a/FrontEnd-React-DashBoard/package.json
+++ b/FrontEnd-React-DashBoard/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
