--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+
+# config redis
+spring.cache.type= redis
+spring.data.redis.host= localhost
+spring.data.redis.port=6379
+
+# config elasticsearch
+spring.data.elasticsearch.repositories.enabled=true
+spring.elasticsearch.uris=http://localhost:9200
