--- a/FrontEnd-React-DashBoard/package.json
+++ b/FrontEnd-React-DashBoard/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
@@ -23,7 +24,10 @@
     "react-draggable": "^4.4.6",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^6.25.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
