--- a/FrontEnd-React-DashBoard/package.json
+++ b/FrontEnd-React-DashBoard/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-i18next": "^15.4.1",
