--- a/Menu-Service/src/main/resources/application.properties
+++ b/Menu-Service/src/main/resources/application.properties
@@ -5,11 +5,14 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 file.upload-dir= /Menu-Service/uploads/
 upload-dir = D:/ProjectJava/restaurant/Menu-service/uploads/
+
+spring.kafka.bootstrap-servers = localhost:9092
+spring.kafka.consumer.group-id=menu-group
 
 
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
