--- a/Invoice-Service/src/main/resources/application.properties
+++ b/Invoice-Service/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.show-sql=true
 spring.kafka.bootstrap-servers = localhost:9092
 spring.kafka.consumer.group-id=invoice-group
 
+grpc.server.port=9090
+
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
