--- a/Report-Service/src/main/resources/application.properties
+++ b/Report-Service/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.jpa.show-sql=true
 spring.kafka.bootstrap-servers = localhost:9092
 spring.kafka.consumer.group-id=report-group
 
+grpc.client.invoice-service.address=static://localhost:9090
+grpc.client.invoice-service.enable-keep-alive=true
+grpc.client.invoice-service.negotiation-type=plaintext
+
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
