add openAI swagger for each service

--- a/Menu-Service/src/main/resources/application.properties
+++ b/Menu-Service/src/main/resources/application.properties
@@ -16,3 +16,15 @@ spring.kafka.consumer.group-id=menu-group
 
 
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+
+# springdoc c?u hình Swagger UI và API docs
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
+
+# (Optional) Thông tin mô t? tài li?u OpenAPI
+# Ph?n bên d??i springdoc.info.*  không ???c h? tr? m?c ??nh trong application.properties. => config b?ng tay thông qua @OpenAPIDefinition
+#springdoc.info.title=Restaurant API
+#springdoc.info.description=API for managing orders, menus, tables...
+#springdoc.info.version=1.0
