--- a/Report-Service/pom.xml
+++ b/Report-Service/pom.xml
@@ -45,6 +45,12 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<!--		Swagger (OpenAPI)-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 		<!--		Thư viện này cung cấp class Generated, thường được sử dụng trong các ứng dụng gRPC để đánh dấu mã được tự động sinh ra.-->
 		<dependency>
 			<groupId>javax.annotation</groupId>
