--- a/User-Service/pom.xml
+++ b/User-Service/pom.xml
@@ -42,6 +42,12 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<!--		Swagger (OpenAPI)-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
