--- a/Menu-Service/src/main/resources/application.properties
+++ b/Menu-Service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.kafka.consumer.group-id=menu-group
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
 # springdoc c?u hình Swagger UI và API docs
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/api/menus/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.default-consumes-media-type=application/json
 springdoc.default-produces-media-type=application/json
