--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.kafka.consumer.group-id=order-group
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
 # springdoc c?u hình Swagger UI và API docs
-springdoc.api-docs.path=/api-docs
+#Truy c?p http://localhost:8082/api-docs ?? xem json
+springdoc.api-docs.path=/api/orders/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.default-consumes-media-type=application/json
 springdoc.default-produces-media-type=application/json
